--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "crawler",
-  "version": "1.0.0",
-  "main": "src/index.ts",
-  "license": "MIT",
-  "dependencies": {
-    "@types/cheerio": "^0.22.13",
-    "@types/express": "^4.17.1",
-    "@types/mongoose": "^5.5.13",
-    "@types/node": "^12.7.2",
-    "@types/node-fetch": "^2.5.0",
-    "cheerio": "^1.0.0-rc.3",
-    "express": "^4.17.1",
-    "mongoose": "^5.6.9",
-    "node-fetch": "^2.6.0",
-    "ts-node": "^8.3.0",
-    "ts-priority-queue": "^0.1.1",
-    "typegoose": "^5.9.0"
-  },
-  "scripts": {
-    "start": "ts-node ."
-  }
+    "name": "search-engine",
+    "version": "1.0.0",
+    "main": "src/index.ts",
+    "license": "MIT",
+    "dependencies": {
+        "@types/cheerio": "^0.22.13",
+        "@types/express": "^4.17.1",
+        "@types/mongoose": "^5.5.13",
+        "@types/node": "^12.7.2",
+        "@types/node-fetch": "^2.5.0",
+        "cheerio": "^1.0.0-rc.3",
+        "ejs": "^2.6.2",
+        "express": "^4.17.1",
+        "mongoose": "^5.6.9",
+        "node-fetch": "^2.6.0",
+        "ts-node": "^8.3.0",
+        "typegoose": "^5.9.0"
+    },
+    "scripts": {
+        "start": "ts-node .",
+        "web": "ts-node src/web/"
+    }
 }
